Fix text on focused buttons becoming invisible in IE

--- a/sampler-app/Resources/Files/unp_2funplugged.css
+++ b/sampler-app/Resources/Files/unp_2funplugged.css
@@ -216,13 +216,13 @@ div.dBar .content {
 	padding-bottom: 100px;
 }
 
-.btn:focus,.btn:focus {
+/*.btn:focus,.btn:focus {
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 	-webkit-tap-highlight-color: transparent;
 	outline: 0;
 	border: none;
 	color: rgba(0, 0, 0, 0);
-}
+}*/
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
